syntax = "proto3";
package app;

import "buf/validate/validate.proto";
import "kernel/crypt.proto";
import "kernel/hash.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/app/v1";

// SecureEncoderSpec is the specification of a secure encoder.
message SecureEncoderSpec {
    // [OPTIONAL]
    // HashAlg is the algorithm to calculate hash value by HMAC.
    // Default is SHA256, or HMAC-Sha256.
    kernel.HashAlg HashAlg = 1 [json_name = "hashAlg"];

    // [OPTIONAL]
    // HMACSecret is the Base64 encoded secret for HMAC.
    // The secret should be at least 64 bytes with enough entropy.
    // Use for example https://generate.plus/en/base64.
    // Default value is Base64(sha512(hostname + uid + gid)) but do not use it in production.
    string HMACSecret = 2 [json_name = "hmacSecret", (buf.validate.field).string.pattern = "[0-9a-zA-Z+/=]+"];

    // [OPTIONAL]
    // CommonKeyCryptType is the algorithm used for encrypting the data.
    // Set CryptSecret using at production.
    // Default is [AESGCM].
    kernel.CommonKeyCryptType CommonKeyCryptType = 3 [json_name = "commonKeyCryptType"];

    // [OPTIONAL]
    // CryptSecret is the Base64 encoded secret for common key encryption.
    // The secret length depends on the crypt algorithms.
    // Use for example https://generate.plus/en/base64.
    // Default value is Base64(sha256(hostname + uid + gid)) but do not use it in production.
    string CryptSecret = 4 [json_name = "cryptSecret", (buf.validate.field).string.pattern = "[0-9a-zA-Z+/=]+"];

    // [OPTIONAL]
    // EnableCompression compress the encoded values by Gzip.
    bool EnableCompression = 6 [json_name = "enableCompression"];

    // [OPTIONAL]
    // DisableHMAC is the flag to disable HMAC hashing.
    // Disabling HMAC slightly increase the performance but it is not recommended
    // from the stand point of security.
    // Never disable HMAC when using the encoder for cookie values or something exposed to clients.
    bool DisableHMAC = 7 [json_name = "disableHMAC"];

    //  [OPTIONAL] DisableEncryption is the flag to disable common key encryption.
    // Disabling encryption slightly increase the performance but it is not recommended
    // from the stand point of security.
    // Never disable encryption when using the encoder for cookie values or something exposed to clients.
    bool DisableEncryption = 8 [json_name = "disableEncryption"];
}
